overflow-x solved.

--- a/dlucy/media/mycss/kehuweituo.css
+++ b/dlucy/media/mycss/kehuweituo.css
@@ -8,3 +8,7 @@
 
 @import url("../css/bootstrap-modal.css");
 
+.dataTables_scrollBody{
+    overflow: scroll !important;
+}
+
